@@ -2,4 +2,16 @@
 Changes since v11.10
 ================================================================================
 
+--------------------------------------------------------------------------------
+basicGL
+
+   MapPage class
+      1) (bug fix) Fixed getCurrentRadius() to return the correct centered or
+         decentered radius value
+
+--------------------------------------------------------------------------------
+dafif
+
+   -- Reinstalled the Dafif and DafifDatabase files
+
 
